--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
   thymeleaf:
     cache: false
     encoding: UTF-8
+
 #Mybatis
 mybatis:
   mapper-locations: classpath:mappers/*.xml
@@ -25,3 +26,11 @@ pagehelper:
 logging:
   level:
     com.etoak.mapper: DEBUG
+
+#自定义配置上传文件喝图片访问
+upload:
+  dir: d:/upload/
+  savePathPrefix: /pics/
+  mapping: /pics/**
+
+
